--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-image: url("../img/bg.jpg");
-  background-size: contain;
+  background-size: cover;
   background-position: center;
 }
 .change-background {
@@ -21,7 +21,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-image: url("../img/bg.gif");
-  background-size: contain;
+  background-size: cover;
   background-position: center;
 }
 .wrapper {
